--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="This is David Tojo's home page from 'github.io'. It contains links to his GitHub and LinkeIn. Also, you can access to see more details about his profile."/>
         <title>David Tojo</title>
+        <link rel="icon" type="image/png" href="./assets/icons/favicon.png" sizes="64x64">
         <link rel="stylesheet" href="style/index.css" />
     </head>
     <body>
