--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -13,11 +13,161 @@
         <link rel="stylesheet" href="./home.css" />
     </head>
     <body>
-        <header id="container-nav"></header>
+        <header id="container-nav">
+            <nav id="back-button">
+                <a href="../../index.html" title="Volver a la página de inicio">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+            </nav>
+            <h1>David Tojo</h1>
+        </header>
+
         <main role="main">
+            <h2 id="title-my-story">Mi historia</h2>
+            <section id="my-story">
+                <div class="timeline">
+                    <div class="container-timeline left-timeline">
+                        <div class="date-timeline">2017</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>El descubrimiento</h2>
+                            <p>
+                                En segundo de Bachillerato, nuestra profesora de TIC, nos pidió que hiciésemos un pequeño programa en Scratch. En ese momento,
+                                se me abrió la puerta a poder realizar cosas que siempre había imaginado gracias a la programación.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-timeline right-timeline">
+                        <div class="date-timeline">2017</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>Comienza la aventura</h2>
+                            <p>
+                                Tras tomar una dura decisión, eligo realizar el FP de DAM (Desarrollo de Aplicaciones Multiplataforma) en lugar del FP de
+                                Iluminación, Captación y Tratamiento de Imagen. La verdad es que nunca quise hacer el grado de Informática, eso siempre lo tuve
+                                claro (a pesar de la insistencia de algunos profesores -que solo querían ayudar-). Como reto (o propósito) siempre quise
+                                demostrar que la educación son simplemente pautas y que el conocimiento reside en la curiosidad.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-timeline left-timeline">
+                        <div class="date-timeline">2019</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>La aventura 2.0</h2>
+                            <p>
+                                "¿Soy capaz de irme de Erasmus?" Esa es la pregunta que me hice cuando nos dieron por primera vez la charla sobre los beneficios
+                                del Erasmus.<br />Y... bueno, otro reto cumplido. La verdad es que nunca había pensando que podría hacerlo ya que mi nivel de
+                                inglés, en ese momento, no era "high" pero lo conseguí gracias a que en el centro teníamos como mini clases de preparación de
+                                inglés y a jugar al Overwatch (ya que me comunicaba en inglés con la gente y, también, me sirvió para coger soltura y aprender
+                                nuevos términos).<br />Ahora mi nivel de inglés me sirve para poder entender y expresar mis ideas con otras personas.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-timeline right-timeline">
+                        <div class="date-timeline">2019</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>Completando experiencias</h2>
+                            <p>
+                                Lo que la gente suele recomendar tras acabar el ciclo de DAM es que se realice el de DAW (Desarrollo de Aplicaciones Web). Y, en
+                                este caso, opté por realizarlo. Debido a que la única modalidad que podía elegir era la de adultos, me propuse buscar un trabajo
+                                e ir ganando experiencia laboral.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-timeline left-timeline">
+                        <div class="date-timeline">2021</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>Introducción</h2>
+                            <p>
+                                Ambos ciclos terminados, genial. Me ha llevado algo más de tiempo debido a que el primer sitio que fui de prácticas (de DAW) no
+                                programaba lo que yo consideraba suficiente (reparaba móviles la mayor parte del día y, cuando había tiempo, cacharreaba en el
+                                Wordpress que tenía en local para mejorar la web). Y creo que acerté porque en el segundo sitio que fui aprendí muchísimo y tuve
+                                la suerte de encontrar grandes personas y profesionales (nunca olvidaré la tortilla de los viernes).<br />Bueno, a lo que iba,
+                                después de acabar las prácticas decidí cambiar de aires y continuar aprendiendo en una gran empresa. En este momento es cuando
+                                entro en Minsait y comienzo a dar pasos de gigante a nivel profesional.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="container-timeline right-timeline">
+                        <div class="date-timeline">2022</div>
+                        <span class="icon-timeline">
+                            <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <title>LinkedIn</title>
+                                <path
+                                    d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
+                                />
+                            </svg>
+                        </span>
+                        <div class="content-timeline">
+                            <h2>Salto al vacío</h2>
+                            <p>
+                                Después de estar casi un año y medio en Indra (y habiendo conocido a grandes profesionales y personas que siempre me han ayudado
+                                en todo), decido que tengo que cambiar de aires ya que, al igual, una gran consultora no sea mi lugar. Ahora mismo estoy
+                                buscando una empresa de producto donde poder aprender cosas diferentes. Durante mi búsqueda, estoy haciendo cosas por mi cuenta
+                                para no dejar de aprender y crecer como programador. Mi intención es conseguir hacer algo en lo que yo tenga la sensación que mi
+                                trabajo tiene un impacto "real".
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <h2>Sobre mí</h2>
+            <section class="about-me"></section>
+
+            <h2>Mis objetivos</h2>
+            <section class="my-targets">
+
+            </section>
+
+            <h2>Contacto</h2>
+            <section class="my-targets">
+
+            </section>
+
+            <h2>CV</h2>
             <section id="container-cv">
-                <h1>CV - David Tojo</h1>
-                <section class="about-me"></section>
+                <section class="about-me-cv"></section>
 
                 <section class="jobs">
                     <h2 class="title-section">Experiencia</h2>
@@ -106,6 +256,7 @@
                                 <li>Creación de mokups (diseño de páginas web).</li>
                             </ul>
                             <ul class="competences">
+                                <li class="php"><a href="#php">#php</a></li>
                                 <li class="windows"><a href="#windows">#windows</a></li>
                                 <li class="wordpress"><a href="#wordpress">#wordpress</a></li>
                             </ul>
@@ -154,7 +305,7 @@
                             </ul>
                             <ul class="competences">
                                 <li class="javascript"><a href="#javascript">#javascript</a></li>
-                                <li class="windows"><a href="#windows">#windows</a></li>
+                                <li class="php"><a href="#php">#php</a></li>
                             </ul>
                         </div>
                     </article>
@@ -184,7 +335,7 @@
                         <h2 class="title-section">Certificados</h2>
                         <article class="certificate">
                             <h2 class="name">
-                                <a href="https://www.scrumstudy.com/certification/verify?type=SMC&number=864646" target="_blank">
+                                <a href="https://www.scrumstudy.com/certification/verify?type=SMC&number=864646" target="_blank" rel="noopener">
                                     Scrum Master Certified (SMC™) - 864646
                                 </a>
                             </h2>
@@ -197,7 +348,7 @@
 
                         <article class="certificate">
                             <h2 class="name">
-                                <a href="https://www.scrumstudy.com/certification/verify?type=SFC&number=901727" target="_blank">
+                                <a href="https://www.scrumstudy.com/certification/verify?type=SFC&number=901727" target="_blank" rel="noopener">
                                     Scrum Fundamentals Certified (SFC™) - 901727
                                 </a>
                             </h2>
