Apartado de mis objetivos añadido

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -152,17 +152,22 @@
                 </div>
             </section>
 
+            <h2>Contacto</h2>
+            <section></section>
+
             <h2>Sobre mí</h2>
-            <section class="about-me"></section>
+            <section id="about-me"></section>
 
             <h2>Mis objetivos</h2>
-            <section class="my-targets">
-
-            </section>
-
-            <h2>Contacto</h2>
-            <section class="my-targets">
-
+            <section id="my-targets">
+                <ul class="list-my-targets">
+                    <li class="target-checked">Irme de Erasmus</li>
+                    <li class="target-checked">Hacer DAM y DAW</li>
+                    <li class="target-checked">Trabajar en una gran empresa</li>
+                    <li class="target-checked">Entrenar a un equipo de fútbol</li>
+                    <li class="target-unchecked">Hacer mi propia aplicación</li>
+                    <li class="target-unchecked">Trabajar en una empresa de producto</li>
+                </ul>
             </section>
 
             <h2>CV</h2>
