--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -590,6 +590,7 @@
                     <li class="target-checked">Trabajar en una gran empresa</li>
                     <li class="target-checked">Entrenar a un equipo de fútbol</li>
                     <li class="target-unchecked">Hacer mi propia aplicación</li>
+                    <li class="target-unchecked">Trabajar en un puesto de FrontEnd</li>
                     <li class="target-unchecked">Trabajar en una empresa de producto</li>
                 </ul>
             </section>
