Cambio de la manera de mostrar la imagen

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -567,6 +567,7 @@
                             <p>Para mí, un buen día es uno en el que llueve.</p>
                         </div>
                         <div id="slide-2" class="slide-container">
+                            <div class="background-slide-container"></div>
                             <p>No tengo un gusto definido para la música. Suelo escuchar canciones que me parecen buenas, no me fijo tanto en el/la artista.</p>
                         </div>
                         <div id="slide-3" class="slide-container">
