Lluvia añadida al primer slider

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -564,6 +564,7 @@
 
                     <div class="show-slider">
                         <div id="slide-1" class="slide-container">
+                            <div class="background-slide-container"></div>
                             <p>Para mí, un buen día es uno en el que llueve.</p>
                         </div>
                         <div id="slide-2" class="slide-container">
@@ -571,12 +572,14 @@
                             <p>No tengo un gusto definido para la música. Suelo escuchar canciones que me parecen buenas, no me fijo tanto en el/la artista.</p>
                         </div>
                         <div id="slide-3" class="slide-container">
+                            <div class="background-slide-container"></div>
                             <p>
                                 Considero que estudiar es lo contrario a aprender. Saber sobre algo, verdaderamente, no se basa en haber memorizado unas cuantas
                                 frases y reproducirlas como si fuera una canción de Serrat.
                             </p>
                         </div>
                         <div id="slide-4" class="slide-container">
+                            <div class="background-slide-container"></div>
                             <p>La vía de escape para olvidarte de lo estresante que puede ser un día.</p>
                         </div>
                     </div>
@@ -1026,5 +1029,6 @@
             </section>
         </main>
         <footer></footer>
+        <script src="rain.js"></script>
     </body>
 </html>
