feat: :speech_balloon: Textos actualizados

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -589,13 +589,14 @@
             <h2>Mis objetivos</h2>
             <section id="my-targets">
                 <ul class="list-my-targets">
+                    <li class="target-unchecked">Seguir mejorando día a día</li>
                     <li class="target-checked">Irme de Erasmus</li>
                     <li class="target-checked">Hacer DAM y DAW</li>
                     <li class="target-checked">Trabajar en una gran empresa</li>
                     <li class="target-checked">Entrenar a un equipo de fútbol</li>
                     <li class="target-checked">Trabajar en un puesto de FrontEnd</li>
                     <li class="target-checked">Trabajar en una empresa de producto</li>
-                    <li class="target-unchecked">Hacer mi propia aplicación</li>
+                    <li class="target-checked">Hacer mi propia aplicación</li>
                 </ul>
             </section>
 
@@ -826,10 +827,10 @@
                         </div>
                     </article>
 
-                    <article id="css" class="pie-wrapper progress-85">
+                    <article id="css" class="pie-wrapper progress-90">
                         <div class="label">
                             <h3>#css</h3>
-                            <span>8,5</span>
+                            <span>9</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
@@ -846,10 +847,10 @@
                         </div>
                     </article>
 
-                    <article id="git" class="pie-wrapper progress-65">
+                    <article id="git" class="pie-wrapper progress-75">
                         <div class="label">
                             <h3>#git</h3>
-                            <span>6,5</span>
+                            <span>7,5</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
@@ -876,10 +877,10 @@
                         </div>
                     </article>
 
-                    <article id="java" class="pie-wrapper progress-75">
+                    <article id="java" class="pie-wrapper progress-70">
                         <div class="label">
                             <h3>#java</h3>
-                            <span>7,5</span>
+                            <span>7</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
@@ -896,10 +897,10 @@
                         </div>
                     </article>
 
-                    <article id="mongodb" class="pie-wrapper progress-60">
+                    <article id="mongodb" class="pie-wrapper progress-70">
                         <div class="label">
                             <h3>#mongodb</h3>
-                            <span>6</span>
+                            <span>7</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
@@ -916,20 +917,20 @@
                         </div>
                     </article>
 
-                    <article id="nosql" class="pie-wrapper progress-60">
+                    <article id="nosql" class="pie-wrapper progress-75">
                         <div class="label">
                             <h3>#nosql</h3>
-                            <span>6</span>
+                            <span>7.5</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
                         </div>
                     </article>
 
-                    <article id="php" class="pie-wrapper progress-50">
+                    <article id="php" class="pie-wrapper progress-60">
                         <div class="label">
                             <h3>#php</h3>
-                            <span>5</span>
+                            <span>6</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
@@ -956,30 +957,30 @@
                         </div>
                     </article>
 
-                    <article id="react" class="pie-wrapper progress-60">
+                    <article id="react" class="pie-wrapper progress-50">
                         <div class="label">
                             <h3>#react</h3>
-                            <span>6</span>
+                            <span>5</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
                         </div>
                     </article>
 
-                    <article id="typescript" class="pie-wrapper progress-80">
+                    <article id="typescript" class="pie-wrapper progress-85">
                         <div class="label">
                             <h3>#typescript</h3>
-                            <span>8</span>
+                            <span>8.5</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
                         </div>
                     </article>
 
-                    <article id="sql" class="pie-wrapper progress-70">
+                    <article id="sql" class="pie-wrapper progress-80">
                         <div class="label">
                             <h3>#sql</h3>
-                            <span>7</span>
+                            <span>8</span>
                         </div>
                         <div class="pie">
                             <div class="circle-line"></div>
