Prueba de app de angular añadida

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                             </a>
                         </li>
                     </ul>
+                    <a class="see-more" href="pages/angular-tactica-board/index.html">
+                        <span>Tactical Board</span>
+                    </a>
                 </div>
             </div>
         </div>
