--- a/index.html
+++ b/index.html
@@ -1,60 +1,85 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta
-            name="description"
-            content="Esta es la página de inicio de David Tojo de 'github.io'. Contiene enlaces a su GitHub y LinkedIn. Además, existe un acceso para ver más detalles sobre su perfil."
-        />
-        <title>David Tojo</title>
-        <link rel="icon" type="image/png" href="./assets/icons/favicon.png" sizes="64x64" />
-        <link rel="stylesheet" href="style/index.css" />
-    </head>
-    <body>
-        <div id="container-first-page">
-            <div id="container-elements">
-                <div class="round-img-container">
-                    <img src="./assets/img/img_portfolio.png" alt="David Tojo" />
-                </div>
-                <div class="right-part">
-                    <h1>David Tojo</h1>
-                    <a class="see-more" href="pages/home/home.html">
-                        <span>Ver más</span>
-                    </a>
-                    <ul>
-                        <li>
-                            <a
-                                href="https://www.linkedin.com/in/david-tojo-yebra-581533176/"
-                                target="_blank"
-                                rel="noopener"
-                                title="Perfil de LinkedIn de David Tojo"
-                            >
-                                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <title>LinkedIn</title>
-                                    <path
-                                        d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"
-                                    />
-                                </svg>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/t19d" target="_blank" rel="noopener" title="Perfil de GitHub de David Tojo">
-                                <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                                    <title>GitHub</title>
-                                    <path
-                                        d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"
-                                    />
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                    <a class="see-more" href="pages/angular-tactica-board/index.html">
-                        <span>Tactical Board</span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Portfolio de David Tojo." />
+		<title>David Tojo</title>
+		<link
+			rel="icon"
+			type="image/png"
+			href="./assets/icons/favicon.png"
+			sizes="64x64"
+		/>
+		<link rel="stylesheet" href="style/resets.css" />
+		<link rel="stylesheet" href="style/index.css" />
+	</head>
+
+	<body>
+		<header class="menu">
+			<div class="max-width">
+				<a class="logo" href="#top">
+					<img src="assets/img/logo.png" alt="Logotipo" />
+				</a>
+
+				<nav>
+					<ul>
+						<li><a href="#experience">experiencia</a></li>
+						<li><a href="#projects">proyectos</a></li>
+						<li><a href="#skills">habilidades</a></li>
+						<li><a href="#me">sobre mí</a></li>
+						<li><a href="#contact">contacto</a></li>
+					</ul>
+				</nav>
+
+				<button class="btn download-cv">descargar CV</button>
+			</div>
+		</header>
+
+		<main>
+			<div class="background-gradient"></div>
+			<div class="max-width">
+				<section id="top">
+					<article class="me-title">
+						<img src="assets/img/me.png" alt="David Tojo" />
+						<h1>David Tojo</h1>
+						<h2>desarrollador fullstack</h2>
+					</article>
+					<article class="links">
+						<a
+							href="https://www.linkedin.com/in/david-tojo-yebra-581533176/"
+							target="_blank"
+							rel="noopener"
+							title="Perfil de LinkedIn de David Tojo"
+							class="btn all-round"
+						>
+							<img
+								src="assets/icons/linkedin.svg"
+								alt="LinkedIn"
+							/>
+						</a>
+						<a
+							href="https://github.com/t19d"
+							target="_blank"
+							rel="noopener"
+							title="Perfil de GitHub de David Tojo"
+							class="btn all-round"
+						>
+							<img src="assets/icons/github.svg" alt="GitHub" />
+						</a>
+					</article>
+				</section>
+
+				<section id="experience"></section>
+				<section id="projects"></section>
+				<section id="skills"></section>
+				<section id="me"></section>
+				<section id="contact"></section>
+			</div>
+		</main>
+
+		<footer></footer>
+		<script src="js/background-gradient.js"></script>
+	</body>
 </html>
