feat: :sparkles: Add experience

--- a/index.html
+++ b/index.html
@@ -71,11 +71,320 @@
 					</article>
 				</section>
 
-				<section id="experience"></section>
-				<section id="projects"></section>
-				<section id="skills"></section>
-				<section id="me"></section>
-				<section id="contact"></section>
+				<section id="experience">
+					<header>
+						<h2 class="title-section">Experiencia</h2>
+					</header>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/cargoffer.jpeg"
+								alt="Cargoffer"
+							/>
+							<h3>Cargo&shy;ffer</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Programador FullStack</h3>
+								<span>2023-04-28 | Actualidad</span>
+							</div>
+
+							<ul>
+								<li>
+									Desarrollo e implementación con Angular e
+									Ionic utilizando TypeScript para crear un
+									front optimizado y dinámico. 💻🎨
+								</li>
+								<li>
+									Uso del framework Express.js con JavaScript
+									para construir un back sólido y adaptable.
+									🌐🔧
+								</li>
+								<li>
+									Desarrollo con Flask en Python, aprovechando
+									su flexibilidad y facilidad de uso. 🐍🌐
+								</li>
+								<li>
+									Experiencia en el uso de Next.js con React
+									para crear aplicaciones web modernas y
+									dinámicas. ⚛️🌐
+								</li>
+								<li>
+									Gestión eficiente de datos utilizando
+									MongoDB, garantizando un almacenamiento y
+									recuperación de datos óptimos. 📊💾
+								</li>
+								<li>
+									Colaboración efectiva con GIT para el
+									control de versiones, facilitando la
+									colaboración en equipo y la gestión del
+									código fuente. 🤝🔗
+								</li>
+								<li>
+									Dominio de herramientas e2e como Playwright
+									y Puppeteer. 🛠️🤖
+								</li>
+								<li>
+									Optimización de procesos de datos y
+									consultas en MongoDB para mejorar el
+									rendimiento y la eficiencia de las
+									aplicaciones. 🚀🔍
+								</li>
+								<li>
+									Implementación de la plataforma de pago de
+									Stripe para transacciones seguras y
+									eficaces. 💵🫰
+								</li>
+								<li>
+									Diseño de interfaces utilizando Figma. 🎨
+								</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/minsait.jpeg"
+								alt="Minsait"
+							/>
+							<h3>Min&shy;sait</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Técnico de software</h3>
+								<span>2021-06-01 | 2022-10-14</span>
+							</div>
+
+							<ul>
+								<li>
+									Implementación y desarrollo utilizando los
+									frameworks de Angular e Ionic con
+									TypeScript. 🖥️
+								</li>
+								<li>
+									Creación, modificación y despliegue de
+									contenedores e imágenes de Docker para
+									facilitar la infraestructura. 🐳
+								</li>
+								<li>
+									Uso efectivo del Spring Framework para la
+									gestión y optimización de procesos. 🌱
+								</li>
+								<li>
+									Manipulación y mejora de asistentes de
+									inteligencia artificial (IA) y chatbots
+									contextuales en texto y voz (RASA)
+									utilizando Python. 🤖
+								</li>
+								<li>
+									Adaptación y actualización de código para
+									garantizar la compatibilidad con diferentes
+									navegadores, desde Internet Explorer hasta
+									Edge. 🌐
+								</li>
+								<li>
+									Trabajo con bases de datos tanto SQL como
+									NoSQL para el almacenamiento y gestión
+									eficiente de datos. 🛢️
+								</li>
+								<li>
+									Utilización de sistemas de control de
+									versiones SVN y GIT para garantizar la
+									colaboración efectiva y la gestión del
+									código fuente. 🔄
+								</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/dominiozero.jpeg"
+								alt="DominioZero"
+							/>
+							<h3>Dominio&shy;Zero</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Prácticas</h3>
+								<span>2021-01-17 | 2021-03-25</span>
+							</div>
+
+							<ul>
+								<li>Desarrollo de módulos en Prestashop. 💼</li>
+								<li>
+									Creación de sitios web en Wordpress
+									utilizando PHP, HTML, CSS y JavaScript. 🌐
+								</li>
+								<li>
+									Utilización de diversos plugins de
+									Wordpress, como WPBakery, Slider Revolution,
+									WooCommerce, Justified Image Grid, entre
+									otros. 🛠️
+								</li>
+								<li>
+									Optimización de páginas web para mejorar la
+									experiencia del usuario y el rendimiento. 🚀
+								</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/maslenovo.jpeg"
+								alt="MasLenovo"
+							/>
+							<h3>Mas&shy;Lenovo</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Sistemas y reparación de hardware</h3>
+								<span>2020-09-27 | 2020-11-05</span>
+							</div>
+
+							<ul>
+								<li>
+									Montaje y mantenimiento de sistemas y
+									componentes informáticos. 💻
+								</li>
+								<li>
+									Instalación y mantenimiento de sistemas
+									operativos, tanto individuales como masivos,
+									incluyendo maquetación e instalación de
+									software ofimático. 🛠️
+								</li>
+								<li>
+									Reparación de ordenadores portátiles, de
+									sobremesa y dispositivos móviles. 📱
+								</li>
+								<li>
+									Mantenimiento y edición de plugins de
+									WordPress para la optimización de sitios
+									web. 🌐
+								</li>
+								<li>
+									Creación de mockups para el diseño de
+									páginas web. 🎨
+								</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/nortempo.jpeg"
+								alt="Nortempo"
+							/>
+							<h3>Nor&shy;tempo</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Becario de Sistemas</h3>
+								<span>2019-09-09 | 2019-12-08</span>
+							</div>
+
+							<ul>
+								<li>
+									Montaje y mantenimiento de sistemas y
+									componentes informáticos. 💻
+								</li>
+								<li>
+									Instalación y mantenimiento de sistemas
+									operativos, tanto individuales como masivos,
+									incluyendo maquetación. 🛠️
+								</li>
+								<li>
+									Instalación y mantenimiento de redes para la
+									transmisión de datos. 🌐
+								</li>
+								<li>
+									Acceso y explotación de bases de datos
+									relacionales. 📊
+								</li>
+								<li>
+									Acceso y mantenimiento de entornos en la
+									nube (servidores de nube) así como
+									herramientas en la nube (Office 365...). ☁️
+								</li>
+								<li>
+									Acceso y administración de Active Directory
+									(creación de usuarios de dominio,
+									mantenimiento...). 👥
+								</li>
+								<li>
+									Gestión de incidencias y documentación. 📝
+								</li>
+							</ul>
+						</div>
+					</article>
+
+					<article class="card">
+						<div class="company">
+							<img
+								src="assets/img/companies/futuro_digitale.jpeg"
+								alt="FuturoDigitale"
+							/>
+							<h3>Futuro Digitale</h3>
+						</div>
+
+						<div class="details">
+							<div class="top">
+								<h3>Prácticas</h3>
+								<span>2019-03-30 | 2019-06-14</span>
+							</div>
+
+							<ul>
+								<li>
+									Mantenimiento de una página web y su base de
+									datos. 🖥️
+								</li>
+								<li>
+									Creación de software para diversos fines. 💻
+								</li>
+								<li>
+									Manejo de Google Sites para la gestión de
+									contenido web. 🌐
+								</li>
+								<li>
+									Comunicación en inglés con colegas de la
+									empresa para colaboraciones y proyectos. 🌍
+								</li>
+							</ul>
+						</div>
+					</article>
+				</section>
+
+				<section id="projects">
+					<header>
+						<h2 class="title-section">Proyectos</h2>
+					</header>
+				</section>
+				<section id="skills">
+					<header>
+						<h2 class="title-section">Habilidades</h2>
+					</header>
+				</section>
+				<section id="me">
+					<header>
+						<h2 class="title-section">Sobre mí</h2>
+					</header>
+				</section>
+				<section id="contact">
+					<header>
+						<h2 class="title-section">Contacto</h2>
+					</header>
+				</section>
 			</div>
 		</main>
 
