--- a/index.html
+++ b/index.html
@@ -390,5 +390,6 @@
 
 		<footer></footer>
 		<script src="js/background-gradient.js"></script>
+		<script src="js/menu-scroll-effect.js"></script>
 	</body>
 </html>
