feat: :sparkles: Add about me

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<nav>
 					<ul>
 						<li><a href="#experience">experiencia</a></li>
-						<li><a href="#projects">proyectos</a></li>
+						<!-- <li><a href="#projects">proyectos</a></li> -->
 						<li><a href="#skills">habilidades</a></li>
 						<li><a href="#me">sobre mí</a></li>
 						<li><a href="#contact">contacto</a></li>
@@ -365,21 +365,89 @@
 					</article>
 				</section>
 
-				<section id="projects">
+				<!-- <section id="projects">
 					<header>
 						<h2 class="title-section">Proyectos</h2>
 					</header>
-				</section>
+				</section> -->
+
 				<section id="skills">
 					<header>
 						<h2 class="title-section">Habilidades</h2>
 					</header>
 				</section>
+
 				<section id="me">
 					<header>
 						<h2 class="title-section">Sobre mí</h2>
 					</header>
+
+					<article>
+						<div class="image">
+							<img src="assets/img/me.jpeg" alt="David Tojo" />
+						</div>
+
+						<div class="texts">
+							<p>
+								¡Hola! Soy un
+								<span class="yellow"
+									>desarrollador Fullstack</span
+								>, siempre listo para abordar desafíos y
+								absorber conocimiento constantemente 🚀. Mi
+								enfoque versátil me permite trabajar tanto en el
+								<span class="yellow">Frontend</span> como en el
+								<span class="yellow">Backend</span> con fluidez
+								💻🌟.
+							</p>
+							<div>
+								<p>Algunas de mis fortalezas son:</p>
+								<ul>
+									<li>
+										🛠️
+										<span class="underline"
+											>Resolución de problemas</span
+										>: Disfruto superando obstáculos y
+										encontrando soluciones creativas.
+									</li>
+									<li>
+										📅
+										<span class="underline"
+											>Organización</span
+										>: Soy meticuloso en la planificación y
+										ejecución de tareas.
+									</li>
+									<li>
+										📚
+										<span class="underline"
+											>Gestión multitarea</span
+										>: Puedo manejar varios proyectos
+										simultáneamente sin comprometer la
+										calidad.
+									</li>
+									<li>
+										🤝
+										<span class="underline"
+											>Trabajo en equipo</span
+										>: Valoro la colaboración y la sinergia
+										que se logra al trabajar en conjunto. Me
+										gusta ayudar a mis compañer@s para
+										mejorar de manera conjunta.
+									</li>
+								</ul>
+							</div>
+							<p>
+								A lo largo de mi carrera, he aprendido a mejorar
+								mi enfoque laboral. Aunque tiendo a ser
+								perfeccionista, estoy trabajando para equilibrar
+								la calidad y la eficiencia ⚖️. Reconozco la
+								importancia de la colaboración en equipo, lo que
+								acelera el proceso de resolución de problemas y
+								fomenta un ambiente de aprendizaje continuo 🤝.
+							</p>
+						</div>
+					</article>
 				</section>
+
 				<section id="contact">
 					<header>
 						<h2 class="title-section">Contacto</h2>
